<resources>
    <string name="app_name">NavigationComp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_150">$150</string>
    <string name="utility">Utility</string>
    <string name="_3600">$3600</string>
    <string name="candles">Candles</string>
    <string name="_200">$200</string>
    <string name="rent">Rent</string>
    <string name="data">Data</string>
    <string name="_300">$300</string>
    <string name="food">Food</string>
    <string name="_1">$1</string>
    <string name="send">send</string>
    <string name="amount">Amount</string>
    <string name="view_transactions">View transactions</string>
    <string name="send_money">Send money</string>
    <string name="view_balance">View balance</string>
    <string name="next">next</string>
    <string name="cancel">cancel</string>
    <string name="name">Name</string>
</resources>
