<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- Food -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:id="@+id/title_food"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".1667"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_300"
        android:id="@+id/value_food"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/title_food"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".1667"
        />
    <!-- End Food -->

    <!-- Data -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:id="@+id/title_data"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".3333"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200"
        android:id="@+id/value_data"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/title_data"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".3333"
        />
    <!-- End Data -->

    <!-- Rent -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rent"
        android:id="@+id/title_rent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200"
        android:id="@+id/value_rent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/title_rent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        />
    <!-- End Rent -->


    <!-- Candles -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candles"
        android:id="@+id/title_candles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".6667"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3600"
        android:id="@+id/value_candles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/title_candles"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".6667"
        />
    <!-- End Candles -->

    <!-- Utility -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utility"
        android:id="@+id/title_utility"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".8334"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_150"
        android:id="@+id/value_utility"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/title_utility"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".8334"
        />
    <!-- End Utility -->

</androidx.constraintlayout.widget.ConstraintLayout>